--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -8,6 +8,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pet-clinic-web</artifactId>
+    <properties>
+        <!-- Web dependencies -->
+        <webjars-bootstrap.version>3.3.6</webjars-bootstrap.version>
+        <webjars-jquery-ui.version>1.11.4</webjars-jquery-ui.version>
+        <webjars-jquery.version>2.2.4</webjars-jquery.version>
+        <wro4j.version>1.8.0</wro4j.version>
+    </properties>
+
 <dependencies>
     <dependency>
     <artifactId>pet-clinic-data</artifactId>
@@ -32,11 +40,7 @@
         <scope>runtime</scope>
         <optional>true</optional>
     </dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-test</artifactId>
-        <scope>test</scope>
-    </dependency>
+
     <!-- webjars -->
     <dependency>
         <groupId>org.webjars</groupId>
@@ -45,26 +49,32 @@
     <dependency>
         <groupId>org.webjars</groupId>
         <artifactId>jquery</artifactId>
-        <version>3.5.1</version>
+        <version>${webjars-jquery.version}</version>
     </dependency>
     <dependency>
         <groupId>org.webjars</groupId>
         <artifactId>jquery-ui</artifactId>
-        <version>1.12.1</version>
+        <version>${webjars-jquery-ui.version}</version>
     </dependency>
     <dependency>
         <groupId>org.webjars</groupId>
         <artifactId>bootstrap</artifactId>
-        <version>4.6.0</version>
+        <version>${webjars-bootstrap.version}</version>
     </dependency>
     <!-- end of webjars -->
+
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
     <build>
         <plugins>
             <plugin>
                 <groupId>ro.isdc.wro4j</groupId>
                 <artifactId>wro4j-maven-plugin</artifactId>
-                <version>1.8.0</version>
+                <version>${wro4j.version}</version>
                 <executions>
                     <execution>
                         <phase>generate-resources</phase>
@@ -84,12 +94,12 @@
                     <dependency>
                         <groupId>org.webjars</groupId>
                         <artifactId>bootstrap</artifactId>
-                        <version>4.6.0</version>
+                        <version>${webjars-bootstrap.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.mockito</groupId>
                         <artifactId>mockito-core</artifactId>
-                        <version>${mockito.version}</version>
+                        <version>3.6.28</version>
                     </dependency>
                 </dependencies>
             </plugin>
