--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -40,7 +40,11 @@
         <scope>runtime</scope>
         <optional>true</optional>
     </dependency>
-
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-validation</artifactId>
+        <version>2.4.3</version>
+    </dependency>
     <!-- webjars -->
     <dependency>
         <groupId>org.webjars</groupId>
@@ -82,6 +86,11 @@
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
         <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.maven.surefire</groupId>
+        <artifactId>maven-surefire-common</artifactId>
+        <version>2.22.2</version>
     </dependency>
 </dependencies>
     <build>
